--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="top-banner flexable-container">
         <div class="half-width">
             <h1>Welcome To </h1>
             <h1><span class="orange-color">Toufiqul hoque</span> World!</h1>
@@ -30,7 +30,48 @@
         </div>
 
     </section>
+    <section class="dream-big flexable-container">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Welcome To </h1>
+            <h1><span class="orange-color">Toufiqul hoque</span> World!</h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
+                work.
+                That's why I am learning and mastering web development. I will not stop until I become the Web
+                Development
+                Hero.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/company/programminghero">DOWNLOAD
+                RESUME</a>
+        </div>
 
+    </section>
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexable-container">
+            <div id="full-dev" class="experience-item">
+                <h2>Full Stack Developer</h2>
+                <h3 class="orange-color">2021-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div id="baby-dev" class="experience-item">
+                <h2>Baby Web Developer</h2>
+                <h3 class="orange-color">2020-2021 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed
+                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+
+    </section>
+    <footer>
+        <p>© Peter Parker 2021, a Programming Hero initiative.</p>
+    </footer>
 
 </body>
 
